passing user object in the response

--- a/mysite/inapp_survey/templates/inapp_survey/index.html
+++ b/mysite/inapp_survey/templates/inapp_survey/index.html
@@ -276,8 +276,9 @@
       }
 
       function submitResponse(is_completed) {
+
         var data = {
-          "user": 1,
+          "user": {{request.user.id}},
           "campaign": surveyResponse.id,
           "is_completed": true,
           "is_canceled": !is_completed,
