Loads showdown when it is not imported before.

--- a/inapp_survey/templates/inapp_survey/index.html
+++ b/inapp_survey/templates/inapp_survey/index.html
@@ -122,6 +122,6 @@
   };
 </script>
 <link rel="stylesheet" href="/static/bower_components/components-font-awesome/css/font-awesome.min.css"></link>
-<script src="/static/bower_components/showdown/dist/showdown.min.js"></script>
+<script>window.showdown || document.write('<script src="/static/bower_components/showdown/dist/showdown.min.js">\x3C/script>');</script>
 <script src="/static/javascript/extended-markdown.js"></script>
 <script src="/static/javascript/script.js"></script>
