Saving only answer text instead of dictionary

--- a/inapp_survey/templates/inapp_survey/index.html
+++ b/inapp_survey/templates/inapp_survey/index.html
@@ -72,7 +72,6 @@
 /* FOR CAMPAIGN SUCCESS ELEMENT */
 .django-inapp-survey-success {
   font-size: 150px;
-  color: green;
   text-align: center;
 }
 </style>
@@ -109,7 +108,7 @@
 <script id="django-inapp-survey-success-template" type="text/x-custom-template">
   <div class="django-inapp-survey-wrapper">
     <div class="django-inapp-survey-success">
-        <i class="fa fa-check" aria-hidden="true"></i>
+        <img src="/static/images/survey-finished.svg"/>
     </div>
   </div>
 </script>
