#2 Adding some between close icon and content for smaller screens

--- a/inapp_survey/templates/inapp_survey/index.html
+++ b/inapp_survey/templates/inapp_survey/index.html
@@ -46,6 +46,11 @@
   margin: auto;
   text-align: center;
 }
+@media screen and (max-width: 1000px) {
+    .django-inapp-survey-announcement {
+        padding-right: 25px;
+    }
+}
 
 /* FOR CAMPAIGN ELEMENT */
 .django-inapp-survey-campaign {
@@ -56,6 +61,11 @@
     padding: 10px 20px;
     height: 100%;
     overflow: auto;
+}
+@media screen and (max-width: 600px) {
+    .django-inapp-survey-campaign {
+        padding-right: 25px;
+    }
 }
 .django-inapp-survey-campaign form input[type=text], .django-inapp-survey-campaign form textarea {
   width: 100%;
